--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/FredrikOlssons/techstoreWithStripe#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "nanoid": "^4.0.0",
     "nodemon": "^2.0.19",
     "stripe": "^10.8.0"
   }
