--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -20,7 +19,9 @@
   },
   "homepage": "https://github.com/FredrikOlssons/techstoreWithStripe#readme",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "nanoid": "^4.0.0",
     "nodemon": "^2.0.19",
     "stripe": "^10.8.0"
